add_executable(algorithm1 algorithm1.cpp)
add_executable(algorithm2 algorithm2.cpp)
add_executable(algorithm3 algorithm3.cpp)
add_executable(algorithm4 algorithm4.cpp)
add_executable(algorithm5 algorithm5.cpp)
add_executable(algorithm6 algorithm6.cpp)

wci_utils(algorithm1 algorithm2 algorithm3 algorithm4 algorithm5 algorithm6)
