project(intro)

set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ")
set( CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} --no-inline")

add_executable(aop0 aop0.cpp)
add_executable(aop1 aop1.cpp)
add_executable(aop2 aop2.cpp)
add_executable(aop3 aop3.cpp)
add_executable(aop4 aop4.cpp)
add_executable(aop7 aop7.cpp)
add_executable(aop8 aop8.cpp)
add_executable(aop10 aop10.cpp)
add_executable(aop11 aop11.cpp)
add_executable(aop12 aop12.cpp)
add_executable(aop13 aop13.cpp)
add_executable(aop14 aop14.cpp)
add_executable(aop15 aop15.cpp)
add_executable(aop16 aop16.cpp)
