if (MSVC )
    add_compile_options(-wd4020 -wd4250)
endif()

add_executable(aop0 aop0.cpp)
add_executable(aop1 aop1.cpp)
add_executable(aop2 aop2.cpp)
add_executable(aop3 aop3.cpp)
add_executable(aop4 aop4.cpp)
add_executable(aop7 aop7.cpp)
add_executable(aop8 aop8.cpp)
add_executable(aop10 aop10.cpp)
add_executable(aop11 aop11.cpp)
add_executable(aop12 aop12.cpp)
add_executable(aop13 aop13.cpp)
add_executable(aop14 aop14.cpp)
add_executable(aop15 aop15.cpp)

update_ogenc(TARGETS aop2 aop3 aop15 WARNINGS -Wsuggest-override -Wnon-virtual-dtor -Wvirtual-inheritance OFF)
wci_utils(aop0 aop1 aop2 aop3 aop4 aop7 aop8 aop10 aop11 aop12 aop13 aop14 aop15)
