project(intro)

add_executable(aop0 aop0.cpp)
add_executable(aop1 aop1.cpp)
add_executable(aop2 aop2.cpp)
add_executable(aop3 aop3.cpp)

add_executable(intro0 intro0.cpp)
add_executable(intro2 intro2.cpp)
add_executable(intro3 intro3.cpp)
add_executable(intro4 intro4.cpp)
add_executable(intro5 intro5.cpp)
